# m3u8-download

./: .gitignore  Cargo.toml  GenAI.md  README.md  build.bat  fix_meta.bat  m3u8_dl.cfg
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  downloader.rs  lib.rs  merger.rs  parser.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  main.rs
crates/gui/src/app/: controller.rs  mod.rs  state.rs  taskbar.rs  theme.rs  utils.rs  view.rs  widgets.rs
