[package]
name = "m3u8-downloader-core"
version = "0.1.0"
edition = "2021"
description = "M3U8 downloader core library"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
base64 = "0.22"
futures = "0.3"
