[package]
name = "m3u8-downloader-gui"
version = "0.1.0"
edition = "2021"
description = "M3U8 downloader GUI application"

[dependencies]
m3u8-downloader-core = { path = "../core" }
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
image = "0.25"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com"] }
raw-window-handle = "0.6"

[build-dependencies]
winres = "0.1"
